<resources>
    <string name="app_name">Brain Trainer</string>
    <string name="text_null">0</string>
    <string name="button_result">Начать заново</string>
    <string name="title">Title</string>
    <string name="exit">Выйти</string>
    <string name="hello">Вас приветстввкет</string>
    <string name="brain_trainer">Brain Trainer</string>
    <string name="app_title">Brain Trainer</string>
    <string name="you_hello">Вас приветстввкет</string>
    <string name="brain_trainer_text">Brain Trainer</string>
    <string name="play">Начать игру</string>
    <string name="level">Уровни</string>
    <string name="exit_play">Выход</string>
    <string name="result">Ваш результат</string>
</resources>